[package]
name = "pggname"
version = "0.2.0"
edition = "2024"
description = "Pangenome graph naming based on hashing in a canonical order"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jltsiren/pggname"

[dependencies]
getopts = { version = "0.2" }
sha2 = { version = "0.10" }
gbz = { version = "0.5" }
simple-sds = { version = "0.4" }
rand = { version = "0.9", optional = true }

[dev-dependencies]
rand = "0.9"

[[bin]]
name = "pggname"
test = false
bench = false
doc = false
